add Test class to simplify testing

--- a/src/RBundle_en_US.properties
+++ b/src/RBundle_en_US.properties
@@ -8,3 +8,7 @@ usernamefieldid=Enter username
 settitle=Login Screen
 
 # Alert messages
+incorrectpassword=Incorrect password
+passwordalerttitle=Password error
+incorrectusername=Incorrect username/password
+usernamealerttitle=Username error
