--- a/src/RBundle_fr_CA.properties
+++ b/src/RBundle_fr_CA.properties
@@ -8,3 +8,7 @@ usernamefieldid=Entrez votre nom d'utilisateur
 settitle=Écran de connexion
 
 # Alert messages
+incorrectpassword=Mot de passe incorrect
+passwordalerttitle=Erreur de mot de passe
+incorrectusername=Nom d'utilisateur / Mot de passe incorrect
+usernamealerttitle=Erreur de nom d'utilisateur
