fixed naming RBundle

--- a/src/RBundle_en_US.properties
+++ b/src/RBundle_en_US.properties
@@ -12,3 +12,6 @@ incorrect_password=Incorrect password
 password_alert_title=Password error
 incorrect_username=Incorrect username/password
 username_alert_title=Username error
+
+# Other forms
+logout_button=Logout
