--- a/src/RBundle_fr_CA.properties
+++ b/src/RBundle_fr_CA.properties
@@ -12,3 +12,6 @@ incorrect_password=Mot de passe incorrect
 password_alert_title=Erreur de mot de passe
 incorrect_username=Nom d'utilisateur / Mot de passe incorrect
 username_alert_title=Erreur de nom d'utilisateur
+
+# Other forms
+logout_button=
